# decrippter2_data

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pr_validation.py
.github/workflows/: ci.yml
data/: ripp0000001.json  ripp0000002.json  ripp0000003.json  ripp0000004.json  ripp0000005.json  ripp0000006.json  ripp0000007.json  ripp0000008.json  ripp0000009.json  ripp0000010.json  ripp0000011.json  ripp0000012.json  ripp0000013.json  ripp0000014.json  ripp0000015.json  ripp0000016.json  ripp0000017.json  ripp0000018.json  ripp0000019.json  ripp0000020.json  ripp0000021.json  ripp0000022.json  ripp0000023.json  ripp0000024.json  ripp0000025.json  ripp0000026.json  ripp0000027.json  ripp0000028.json  ripp0000029.json  ripp0000030.json  ripp0000031.json  ripp0000032.json  ripp0000033.json  ripp0000034.json  ripp0000035.json  ripp0000036.json  ripp0000037.json  ripp0000038.json  ripp0000039.json  ripp0000040.json  (+381 more)
src/decrippter2_data/: main.py
src/decrippter2_data/schema/: schema.json
tests/: test_main.py
